Refactor CORS configuration in SecurityConfiguration to use FilterRegistrationBean
- Replaced the previous CorsConfigurationSource method with a new corsFilter method that utilizes FilterRegistrationBean for CORS handling.
- Updated allowed origins to use wildcard patterns for broader access.
- Ensured that CORS settings are applied with the highest precedence for improved security and flexibility.